# red_team_agent

./: .env.example  .gitignore  README.md  docker-compose.yml  install_log.txt  install_log2.txt  lock_log.txt  notes.txt  pyproject.toml  ruff_errors.txt  ruff_errors_utf8.txt  test_fail.txt  test_nmap.py  test_output.txt  test_ping.py  test_results.txt  test_results_utf8.txt  test_traceback.txt  upgrade_log.txt
cyber_range/attacker/: Dockerfile  requirements.txt
cyber_range/struts_rce/: Dockerfile
cyber_range/struts_rce/struts-app/: index.jsp
cyber_range/vuln_ssh/: Dockerfile
evaluation/: evaluator.py
src/: __init__.py  cli.py  config.py  evaluation.py  guardrails.py  logging.py
src/agent/: __init__.py  graph.py  prompts.py  state.py  strategy.py
src/tools/: __init__.py  core_tools.py  http_tools.py  metasploit_tools.py  network_tools.py  nmap_tools.py
src/ui/: app.py
tests/: dynamic_test_suite.py  test_core.py  test_dynamic_scenarios.py  test_graph.py
